--- a/videos/index.html
+++ b/videos/index.html
@@ -117,22 +117,22 @@ a:active {
 	<br>
 
 	
-<iframe src="https://www.youtube.com/watch?v=Dv8tu13Mws0"></iframe>
+<iframe src="https://www.youtube.com/embed/Dv8tu13Mws0"></iframe>
 <!-- ^bowie says -->
 
-<iframe src="https://www.youtube.com/watch?v=BIrec1QMmJc"></iframe>
+<iframe src="https://www.youtube.com/embed/BIrec1QMmJc"></iframe>
 <!-- ^skyline -->
 
-<iframe src="https://www.youtube.com/watch?v=7TqRYq2Fd2M"></iframe>
+<iframe src="https://www.youtube.com/embed/7TqRYq2Fd2M"></iframe>
 <!-- ^chateau -->
 
-<iframe src="https://www.youtube.com/watch?v=sGYOtJnWlSY"></iframe>
+<iframe src="https://www.youtube.com/embed/sGYOtJnWlSY"></iframe>
 <!-- ^ashes -->
 
-<iframe src="https://www.youtube.com/watch?v=yceaOsbQzZk"></iframe>
+<iframe src="https://www.youtube.com/embed/yceaOsbQzZk"></iframe>
 <!-- ^pigeon -->
 
-<iframe src="https://www.youtube.com/watch?v=J2udTFBCmPg"></iframe>
+<iframe src="https://www.youtube.com/embed/J2udTFBCmPg"></iframe>
 <!-- ^round and round -->
 
 </body>
