--- a/videos/index.html
+++ b/videos/index.html
@@ -22,7 +22,8 @@ iframe {
 	aspect-ratio: 1/1;
 	width: 100%;
 	box-shadow: 0px 2px 5px 0px #aaaaaa;
-	frameBorder: 0;
+	border: 0px;
+	margin-bottom: 60px;
 }
 .logo {
 	display: block;
