--- a/videos/index.html
+++ b/videos/index.html
@@ -23,7 +23,7 @@ iframe {
 	width: 80%;
 	box-shadow: 0px 2px 5px 0px #aaaaaa;
 	border: 0px;
-	margin-bottom: 60px;
+	margin-bottom: 87px;
 }
 .logo {
 	display: block;
@@ -112,11 +112,98 @@ a:active {
   		<input type="submit" value="Send">
 	</form>
 
-	
-<p class="masthead">Test test test page under construction while updates are coded :) test test test <p>	
 	<br>
 	<br>
 
+<iframe src="https://www.youtube.com/embed/Cncz1RA_0-Y"></iframe>
+<!-- ^hey -->
+
+<iframe src="https://www.youtube.com/embed/Zl2-5SUf5Pw"></iframe>
+<!-- ^did you know -->
+
+<iframe src="https://www.youtube.com/embed/KNFL65hznMM"></iframe>
+<!-- ^disconnected -->
+
+<iframe src="https://www.youtube.com/embed/94MdnNQ9Nf0"></iframe>
+<!-- ^make time -->
+
+<iframe src="https://www.youtube.com/embed/bTo6BpCCZI8"></iframe>
+<!-- ^getaway -->
+
+<iframe src="https://www.youtube.com/embed/N_0JC2CYFog"></iframe>
+<!-- ^improv -->		
+		
+<iframe src="https://www.youtube.com/embed/HQeMO4nnF2w"></iframe>
+<!-- ^free -->
+
+<iframe src="https://www.youtube.com/embed/j1BY6X19LhE"></iframe>
+<!-- ^wingding -->
+
+<iframe src="https://www.youtube.com/embed/JjD74eq0Wvw"></iframe>
+<!-- ^to do 2 -->
+
+<iframe src="https://www.youtube.com/embed/gfXe6OYVHi8"></iframe>
+<!-- ^to do 1 -->
+
+<iframe src="https://www.youtube.com/embed/YKHeKL8zqMg"></iframe>
+<!-- ^words of kindness -->
+
+<iframe src="https://www.youtube.com/embed/DLxVPskZ7E"></iframe>
+<!-- ^argyle -->	
+
+<iframe src="https://www.youtube.com/embed/jISEl-JoMBk"></iframe>
+<!-- ^courage fell -->
+
+<iframe src="https://www.youtube.com/embed/HAnaqtnhkbU"></iframe>
+<!-- ^cry -->
+
+<iframe src="https://www.youtube.com/embed/PfzdlpXdYbE"></iframe>
+<!-- ^commuter -->
+
+<iframe src="https://www.youtube.com/embed/QzaDOm24QRE"></iframe>
+<!-- ^how sweet -->
+
+<iframe src="https://www.youtube.com/embed/eyMZHxUs_ww"></iframe>
+<!-- ^room to work in -->
+
+<iframe src="https://www.youtube.com/embed/eXJ9OoJ7bLI"></iframe>
+<!-- ^golden -->
+	
+<iframe src="https://www.youtube.com/embed/v53hnyHHBqA"></iframe>
+<!-- ^get along -->
+
+<iframe src="https://www.youtube.com/embed/6F7FNYQnF7g"></iframe>
+<!-- ^dirty work -->
+
+<iframe src="https://www.youtube.com/embed/wGAEcLJL6gA"></iframe>
+<!-- ^burning down the house -->
+
+<iframe src="https://www.youtube.com/embed/yEm5QgeU8MI"></iframe>
+<!-- ^living hard -->
+
+<iframe src="https://www.youtube.com/embed/2yNWplKFTTE"></iframe>
+<!-- ^fagen -->
+
+<iframe src="https://www.youtube.com/embed/V9c8kX7nU74"></iframe>
+<!-- ^pumped -->	
+
+<iframe src="https://www.youtube.com/embed/un0GzSi4P9M"></iframe>
+<!-- ^fire and rain -->
+
+<iframe src="https://www.youtube.com/embed/1vB8HNdEmk0"></iframe>
+<!-- ^every little thing -->
+
+<iframe src="https://www.youtube.com/embed/bSBDuib0SJU"></iframe>
+<!-- ^hero -->
+
+<iframe src="https://www.youtube.com/embed/8pHQN57_wPc"></iframe>
+<!-- ^gotta learn -->
+
+<iframe src="https://www.youtube.com/embed/vip4DG_MQTg"></iframe>
+<!-- ^prince -->
+
+<iframe src="https://www.youtube.com/embed/xozk8MLiDbg"></iframe>
+<!-- ^nature boy -->
 	
 <iframe src="https://www.youtube.com/embed/Dv8tu13Mws0"></iframe>
 <!-- ^bowie says -->
@@ -134,8 +221,14 @@ a:active {
 <!-- ^pigeon -->
 
 <iframe src="https://www.youtube.com/embed/J2udTFBCmPg"></iframe>
-
 <!-- ^round and round -->
 
+	
+	<br>
+	<br>
+	<br>
+<h1 style="font-family:garamond; text-align: right; color: #362000"><i>by Tom</i></h1>
+	</br>
+<p style="font-family:Trebuchet MS;color:gray; color: #362000"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 </body>
 </html>
