--- a/videos/index.html
+++ b/videos/index.html
@@ -227,8 +227,8 @@ a:active {
 	<br>
 	<br>
 	<br>
-<h1 style="font-family:garamond; text-align: right; color: #362000"><i>by Tom</i></h1>
+<h1 style="font-family:garamond; text-align: right; color: white;"><i>by Tom</i></h1>
 	</br>
-<p style="font-family:Trebuchet MS;color:gray; color: #362000"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
+<p style="font-family:Trebuchet MS;color:gray; color: white;"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 </body>
 </html>
