--- a/videos/index.html
+++ b/videos/index.html
@@ -145,7 +145,7 @@ a:active {
 <iframe src="https://www.youtube.com/embed/gfXe6OYVHi8"></iframe>
 <!-- ^to do 1 -->
 
-<iframe src="https://www.youtube.com/embed/YKHeKL8zqMg"></iframe>
+<iframe src="https://www.youtube.com/embed/_DLxVPskZ7E"></iframe>
 <!-- ^words of kindness -->
 
 <iframe src="https://www.youtube.com/embed/DLxVPskZ7E"></iframe>
