--- a/videos/index.html
+++ b/videos/index.html
@@ -115,17 +115,14 @@ a:active {
 	<br>
 	<br>
 
-<iframe src="https://www.youtube.com/embed/Cncz1RA_0-Y"></iframe>
-<!-- ^hey -->	
-	
 <iframe src="https://www.youtube.com/embed/Zl2-5SUf5Pw"></iframe>
 <!-- ^did you know -->	
 	
-<iframe src="https://www.youtube.com/embed/KNFL65hznMM"></iframe>	
-<!-- ^disconnected -->	
+<iframe src="https://www.youtube.com/embed/Cncz1RA_0-Y"></iframe>
+<!-- ^hey -->	
 	
-<iframe src="https://www.youtube.com/embed/94MdnNQ9Nf0"></iframe>
-<!-- ^make time -->	
+<iframe src="https://www.youtube.com/embed/KNFL65hznMM"></iframe>	
+<!-- ^disconnected -->		
 
 <iframe src="https://www.youtube.com/embed/94MdnNQ9Nf0"></iframe>
 <!-- ^make time -->
@@ -148,7 +145,7 @@ a:active {
 <iframe src="https://www.youtube.com/embed/gfXe6OYVHi8"></iframe>
 <!-- ^to do 1 -->
 
-<iframe src="https://www.youtube.com/embed/_DLxVPskZ7E"></iframe>
+<iframe src="https://www.youtube.com/embed/YKHeKL8zqMg"></iframe>
 <!-- ^words of kindness -->
 
 <iframe src="https://www.youtube.com/embed/DLxVPskZ7E"></iframe>
