--- a/songs/index.html
+++ b/songs/index.html
@@ -136,6 +136,13 @@ img {
 	
 <p class="header">–––– 2021 ––––</p>
 
+	
+<p class="title"><a href="Improv 2021.10.08 JT 1.mp3" target="_blank">"Variation on a Theme by JT #2.mp3"</a> (& <a href="Improv 2021.10.08 JT 2.mp3" target="_blank">#3</a>)</p>
+<p class="title"><a href="Improv 2021.10.02.mp3" target="_blank">"Improv October, 2021 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2021.10.02 2.mp3" target="_blank">"Improv October 2, 2021 #2.mp3"</a></p>
+<p class="title"><a href="Improv 2021.10.01.mp3" target="_blank">"Improv October 1, 2021.mp3"</a></p>
+<p class="title"><a href="Sunny in the dark.mp3" target="_blank">"Sunny (in the dark).mp3"</a> (Bobby Hebb)</p>
+<p class="title"><a href="Yeehaw 2021.09.28.mp3" target="_blank">"Yeehaw September 28, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.09.22.mp3" target="_blank">"Noise September 22, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.09.19.mp3" target="_blank">"Improv September 19, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.09.17.mp3" target="_blank">"Improv September 17, 2021.mp3"</a></p>
