--- a/songs/index.html
+++ b/songs/index.html
@@ -137,8 +137,8 @@ img {
 <p class="header">–––– 2021 ––––</p>
 
 	
-<p class="title"><a href="Improv 2021.10.08 JT 1.mp3" target="_blank">"Variation on a Theme by JT #2.mp3"</a> (& <a href="Improv 2021.10.08 JT 2.mp3" target="_blank">#3</a>)</p>
-<p class="title"><a href="Improv 2021.10.02.mp3" target="_blank">"Improv October, 2021 #1.mp3"</a></p>
+<p class="title" title="October 8, 2021"><a href="Improv 2021.10.08 JT 1.mp3" target="_blank">"Variation on a Theme by JT #2.mp3"</a> (& <a href="Improv 2021.10.08 JT 2.mp3" target="_blank">#3</a>)</p>
+<p class="title"><a href="Improv 2021.10.02.mp3" target="_blank">"Improv October 2, 2021 #1.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.02 2.mp3" target="_blank">"Improv October 2, 2021 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.01.mp3" target="_blank">"Improv October 1, 2021.mp3"</a></p>
 <p class="title"><a href="Sunny in the dark.mp3" target="_blank">"Sunny <i>(in the dark!)</i>.mp3"</a> (Bobby Hebb)</p>
