--- a/songs/index.html
+++ b/songs/index.html
@@ -243,7 +243,8 @@ img {
 	<br>
 <p class="header">–––– 2020 ––––</p>
 
-<p class="title" title="December 18, 2020"><a href="Song for 2020.mp3" target="_blank>"Song for 2020.mp3"</a></p>
+	<p class="title"><a href="Song for 2020.mp3" target="_blank>"Song for 2020.mp3"</a></p>
+<p class="title"><a href="Song for 2020.mp3" target="_blank>"Song for 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.15.mp3" target="_blank">"Improv December 15, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.12.04.mp3" target="_blank">"Improv December 4, 2020.mp3"</a></p>
 <p class="title"><a href="Improv 2020.11.11.mp3" target="_blank">"Improv November 11, 2020.mp3"</a></p>
