--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <!--special thanks to John Rioux for help with the javascript! https://www.johnrioux.com/-->
-
+<head>
+<link rel="icon" type="image/png" href="images/t favicon.png">
+  
+<TITLE>
+   Admin
+</TITLE>
 <style>
 p {
     
     }
 </style>
+</head>
 <body>
 
 <h2>Anagram HTML Formatter</h2>
