--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -61,6 +61,22 @@ img {
 	margin-top: 8px;
 	margin-bottom: 50px;
 }
+.main {
+	font-size: 12pt;
+	font-family:Trebuchet MS;
+	color: #362000;
+	text-align: center;
+	margin-top: 8px;
+	margin-bottom: 50px;
+}
+.letters {
+	font-size: 12pt;
+	font-family:Comic Sans MS;
+	color: #362000;
+	text-align: center;
+	margin-top: 8px;
+	margin-bottom: 50px;
+}
 a:link {
   color: #2a84ff;
   background-color: transparent;
@@ -103,6 +119,12 @@ a:active {
 		<input type="email" name="_replyto">
   		<input type="submit" value="Send">
 	</form>
+	
+<div title="January 6, 2020">
+<p class="main">Court and Spark</p>
+<p class="letters">AA<br>C<br>D<br>K<br>N<br>O<br>P<br>RR<br>S<br>T<br>U<br></p>
+<p class="main">Rap Soundtrack</p>
+</div>
 
 </body>
 </html>
