--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
-  
+<base target="_blank">
+	
 <TITLE>
    Anagrams
 </TITLE>
@@ -17,6 +18,10 @@ img {
 	width: 93%;
 	height: auto;
 	box-shadow: 0px 2px 5px 0px #696969;
+}
+div {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 .logo {
 	display: block;
@@ -60,6 +65,26 @@ img {
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 50px;
+	a:link {
+		color:white;
+ 		background-color: transparent;
+  		text-decoration: underline;
+		}
+	a:visited {
+		color:white;
+  		background-color: transparent;
+  		text-decoration: underline;
+		}
+	a:hover {
+  		color: #2a84ff;
+  		background-color: transparent;
+  		text-decoration: underline;
+		}
+	a:active {
+		color: #23f7ff;
+  		background-color: transparent;
+  		text-decoration: underline;
+		}
 }
 .main {
 	font-size: 12pt;
@@ -73,11 +98,10 @@ img {
 .letters {
 	font-size: 12pt;
 	font-family:Courier;
-	color: #362000;
+	color: #bebebe;
 	text-align: center;
 	margin-top: 8px;
-	margin-bottom: 8px;
-	color:light-gray;
+	margin-bottom: 7px;
 }
 a:link {
   color: #2a84ff;
@@ -128,7 +152,7 @@ a:active {
 
 <div title="October 27, 2021">
 <p class="main"><a href="https://www.youtube.com/watch?v=0DPonVSfrEk">nowhere; shampoo; tv; come back; boyzone; slim tie; showdown; can't stop</a></p>
-<p class="letters">N<br>OOOOOOOOO<br>WWW<br>HHH<br>EEEEE<br>R<br>SSSS<br>AAA<br>MMM<br>P<br>TTTT<br>V<br>CCC<br>BB<br>K<br>Y<br>Z<br>NNN<br>L<br>II<br>D<br>P</p>
+<p class="letters">AAA<br>BB<br>CCC<br>D<br>EEEEE<br>HHH<br>II<br>K<br>L<br>MMM<br>NNNN<br>OOOOOOOOO<br>PP<br>R<br>SSSS<br>TTTT<br>V<br>WWW<br>Y<br>Z</p>
 <p class="main">photoz: <a href="https://upload.wikimedia.org//wikipedia/en/thumb/d/da/MWSTWUS2.jpg/640px-MWSTWUS2.jpg" target="_blank">cowboy chomps on/botches vows</a>; <a href="https://www.youtube.com/watch?v=QWtsV50_-p4&t=63s" target="_blank">
 man lost in time near KaDeWe</a><br></p>
 </div>
