--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -20,8 +20,8 @@ img {
 	box-shadow: 0px 2px 5px 0px #696969;
 }
 div {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-top: 10px;
+	margin-bottom: 70px;
 }
 .logo {
 	display: block;
@@ -98,7 +98,7 @@ div {
 .letters {
 	font-size: 12pt;
 	font-family:Courier;
-	color: #bebebe;
+	color:white;
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 7px;
