--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -65,26 +65,6 @@ div {
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 50px;
-	a:link {
-		color:white;
- 		background-color: transparent;
-  		text-decoration: underline;
-		}
-	a:visited {
-		color:white;
-  		background-color: transparent;
-  		text-decoration: underline;
-		}
-	a:hover {
-  		color: #2a84ff;
-  		background-color: transparent;
-  		text-decoration: underline;
-		}
-	a:active {
-		color: #23f7ff;
-  		background-color: transparent;
-  		text-decoration: underline;
-		}
 }
 .main {
 	font-size: 12pt;
@@ -98,7 +78,7 @@ div {
 .letters {
 	font-size: 12pt;
 	font-family:Courier;
-	color:white;
+	color: #f9f9f9;
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 7px;
