--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -12,7 +12,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f7c791;
+	background-color: #ffa281;
 }
 img {
 	width: 93%;
@@ -53,7 +53,7 @@ div {
 .header {
 	font-size: 16pt;
 	font-family: garamond;
-	color:gray;
+	color:white;
 	text-align: center;
 	font-weight: normal;
 	font-style: italic;
@@ -78,18 +78,18 @@ div {
 .letters {
 	font-size: 12pt;
 	font-family:Courier;
-	color: #f9f9f9;
+	color: #ececec;
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 7px;
 }
 a:link {
-  color: #2a84ff;
+  color: #509aff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: #2a84ff;
+  color: #509aff;
   background-color: transparent;
   text-decoration: underline;
 }
