--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -78,7 +78,7 @@ div {
 .letters {
 	font-size: 12pt;
 	font-family:Courier;
-	color: #ececec;
+	color: #ffe7d8;
 	text-align: center;
 	margin-top: 8px;
 	margin-bottom: 7px;
