--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -483,6 +483,11 @@ analyse etymology/odors</a>, drinnnnk, n die <br>Mr. Ninny Willy Shakespeare? no
 <p class="main">Rap Soundtrack</p>
 </div>
 
+</br>
+</br>
+<h1 style="font-family:garamond;text-align:right;color:white;"><i>my boT</i></h1>
+</br>
+<p style="font-family:Trebuchet MS;color: #ffe7d8"><i>stardomfoam@maim.clog • www.grimsatan.moc/_gamestop</i></p>
 
 </body>
 </html>
