--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -114,7 +114,7 @@ a:active {
 	
 <img src="images/tomspage top games white.png" class="logo">
 	
-<p class="masthead"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
+<p class="masthead"><a href="https://www.tomspage.org" target="_self">pictures</a>   •   <a href="https://www.tomspage.org/videos" target="_self">videos</a>   •   <a href="https://www.tomspage.org/songs" target="_self">songs</a>   •   <a href="https://www.tomspage.org/anagrams" target="_self">text</a></p>
 <p class="masthead">by Tom</p>
 	
 	<br>
