--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -12,7 +12,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #ffdbc9;
+	background-color: #f5c9b3;
 }
 img {
 	width: 93%;
