--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -156,7 +156,7 @@ man lost in time near KaDeWe</a><br></p>
 </div>
 
 <div title="July 22, 2021">
-<p class="main">F Sharp Major 7</p>
+<p class="main">F Sharp Major Seven</p>
 <p class="letters">AA<br>EE<br>F<br>H<br>J<br>M<br>N<br>O<br>P<br>RR<br>SS<br>V</p>
 <p class="main">freshmen Java pros</p>
 </div>
