--- a/songs/index.html
+++ b/songs/index.html
@@ -146,8 +146,8 @@ img {
 <p class="title"><a href="Improv 2021.10.27.mp3" target="_blank">"Improv October 27, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.26 tswift.mp3" target="_blank">"Variation on a Theme by TSwift #2.mp3"</a></p>
 <p class="title"><a href="Noise 2021.10.23.mp3" target="_blank">"Noise October 23, 2021.mp3"</a></p>
+<p class="title"><a href="Improv 2021.10.22 2.mp3" target="_blank">"Come On Out.mp3"</a></p>	
 <p class="title"><a href="Improv 2021.10.22.mp3" target="_blank">"Improv October 22, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.22 2.mp3" target="_blank">"Improv October 22, 2021 #2.mp3"</a></p>
 <p class="title"><a href="Noise 2021.10.22.mp3" target="_blank">"Noise October 22, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.22 JT.mp3" target="_blank">"Variation on a Theme by JT #4.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.18.mp3" target="_blank">"Improv October 18, 2021.mp3"</a></p>
