--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ a:active {
 
 <p class="body">Super special series:</p>
 	<p class="body" style="font-style:normal; line-height: 25px;">
-		<a href="https://www.tomspage.org/sdso">Socially Distant Symphony Orchestra</a><br>
+		<a href="https://www.youtube.com/watch?v=bjn2se7-eQU">Socially Distant Symphony Orchestra</a><i> (stay tuned for updates on the next SDSO video!)</i><br>
 		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a><br>
 		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
 	</p>	
@@ -117,7 +117,10 @@ a:active {
 	<br>
 	<br>
 	<br>
-
+<p class="header">––––    Pictures    ––––</p>
+<img src="images/wave 12.22.21.jpg" title="December 22, 2021">
+	<p class="title">"wave 12.22.21.jpg"</p>
+	
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 	<p class="title">"in the desert iii (portait of the artist 7.7.21).jpg"</p>
 
@@ -176,7 +179,7 @@ a:active {
 	<p class="title">"on being alone.jpg"</p>
 
 <img src="images/4.5.20.jpg" title="April 5, 2020">
-	<p class="title">"camelot"</p>
+	<p class="title">"camelot.jpg"</p>
 
 <img src="images/remember how to do this.jpg" title="April 4, 2020">
 	<p class="title">"remember how to do this.jpg"</p>
@@ -188,7 +191,7 @@ a:active {
 	<p class="title">"midst of deliverance ii.jpg"</p>
 
 <img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
-	<p class="title">"midst of deliverance i (portait of the artist .16.20)"</p>
+	<p class="title">"midst of deliverance i (portait of the artist .16.20).jpg"</p>
 
 <img src="images/hot tip 19.jpg" title="March 8, 2020">
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 19.jpg</a>"</p>
