--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ a:active {
 	<p class="title">"midst of deliverance ii.jpg"</p>
 
 <img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
-	<p class="title">"midst of deliverance i (portait of the artist .16.20).jpg"</p>
+	<p class="title">"midst of deliverance i (portait of the artist 3.16.20).jpg"</p>
 
 <img src="images/hot tip 19.jpg" title="March 8, 2020">
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 19.jpg</a>"</p>
