--- a/songs/index.html
+++ b/songs/index.html
@@ -136,23 +136,23 @@ img {
 	
 <p class="header">–––– 2021 ––––</p>
 
-<p class="title"><a href="Song for Charles Darwin.mp3" target="_blank">"Song for Charles Darwin.mp3"</a></p>
+<p class="title" title="December 14, 2021"><a href="Song for Charles Darwin.mp3" target="_blank">"Song for Charles Darwin.mp3"</a></p>
 <p class="title"><a href="Improv 2021.12.07.mp3" target="_blank">"Improv December 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.11.20.mp3" target="_blank">"Improv November 20, 2021.mp3"</a></p>
-<p class="title"><a href="Song for the Cambrian Explosion.mp3" target="_blank">"Song for the Cambrian Explosion.mp3"</a></p>
-<p class="title"><a href="Improv 2021.11.06 yeehaw.mp3" target="_blank">"Yeehaw November 6, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.29 water studies.mp3" target="_blank">"Water Studies.mp3"</a></p>
+<p class="title" title="November 11, 2021"><a href="Song for the Cambrian Explosion.mp3" target="_blank">"Song for the Cambrian Explosion.mp3"</a></p>
+<p class="title" title="November 6, 2021"><a href="Improv 2021.11.06 yeehaw.mp3" target="_blank">"Yeehaw November 6, 2021.mp3"</a></p>
+<p class="title" title="October 29, 2021"><a href="Improv 2021.10.29 water studies.mp3" target="_blank">"Water Studies.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.29 2.mp3" target="_blank">"Improv October 29, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.27.mp3" target="_blank">"Improv October 27, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.26 tswift.mp3" target="_blank">"Variation on a Theme by TSwift #2.mp3"</a></p>
+<p class="title" title="October 26, 2021"><a href="Improv 2021.10.26 tswift.mp3" target="_blank">"Variation on a Theme by TSwift #2.mp3"</a></p>
 <p class="title"><a href="Noise 2021.10.23.mp3" target="_blank">"Noise October 23, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.22 2.mp3" target="_blank">"Come On Out.mp3"</a></p>	
+<p class="title" title="October 22, 2021"><a href="Improv 2021.10.22 2.mp3" target="_blank">"Come On Out.mp3"</a></p>	
 <p class="title"><a href="Improv 2021.10.22.mp3" target="_blank">"Improv October 22, 2021.mp3"</a></p>
 <p class="title"><a href="Noise 2021.10.22.mp3" target="_blank">"Noise October 22, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.22 JT.mp3" target="_blank">"Variation on a Theme by JT #4.mp3"</a></p>
+<p class="title" title="October 22, 2021"><a href="Improv 2021.10.22 JT.mp3" target="_blank">"Variation on a Theme by JT #4.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.18.mp3" target="_blank">"Improv October 18, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.17.mp3" target="_blank">"Improv October 17, 2021.mp3"</a></p>
-<p class="title"><a href="Improv 2021.10.17 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #8.mp3"</a></p>
+<p class="title" title="October 17, 2021"><a href="Improv 2021.10.17 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #8.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.13.mp3" target="_blank">"Improv October 29, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.13 2.mp3" target="_blank">"Improv October 13, 2021 #2.mp3"</a></p>
 <p class="title"><a href="Improv 2021.10.13 3.mp3" target="_blank">"Improv October 13, 2021 #3.mp3"</a></p>
@@ -457,7 +457,7 @@ img {
 
 <p class="title" title="November 23, 2018"><a href="Rach 3.mp3" target="_blank">"Variation on a Theme by Rachmaninoff.mp3"</a> (<a href="https://www.youtube.com/watch?v=UKziGGumuEk" target="_blank">▶️</a>)</p>
 <p class="title" title="June 15, 2018"><a href="fire and ice.mp3" target="_blank">"Fire & Ice.mp3"</a></p>
-<p class="title" title="June 9, 2018"><a href="Short Song for Donald Trump.mp3" target="_blank">"Short Song for Donald Trump.mp3"</a></p>
+<p class="title" title="June 9, 2018"><a href="Short Song for Donald Trump.mp3" target="_blank">"Short Song for the President of the United States.mp3"</a></p>
 <p class="title"><a href="Improv 2018.05.08.mp3" target="_blank">"Improv May 8, 2018.mp3"</a></p>
 
 </br>
