--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -130,6 +130,12 @@ a:active {
 	<br>
 	<p class="header">–––– Anagrams –––––</p>
 
+<div title="December 25, 2021">
+<p class="main">Buy now, while supplies last!</p>
+<p class="letters">A<br>B<br>EE<br>H<br>II<br>LLL<br>N<br>O<br>PP<br>SSS<br>T<br>UU<br>WW<br>Y<br></p>
+	<p class="main">Yup, essentials! <i>{bullwhip}</i> …ow!<br></p>
+</div>
+	
 <div title="October 27, 2021">
 <p class="main"><a href="https://www.youtube.com/watch?v=0DPonVSfrEk">nowhere; shampoo; tv; come back; boyzone; slim tie; showdown; can't stop</a></p>
 <p class="letters">AAA<br>BB<br>CCC<br>D<br>EEEEE<br>HHH<br>II<br>K<br>L<br>MMM<br>NNNN<br>OOOOOOOOO<br>PP<br>R<br>SSSS<br>TTTT<br>V<br>WWW<br>Y<br>Z</p>
