--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -12,7 +12,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f5c9b3;
+	background-color: #ffa087;
 }
 img {
 	width: 93%;
@@ -84,17 +84,17 @@ div {
 	margin-bottom: 7px;
 }
 a:link {
-  color: #509aff;
+  color: #0645AD;
   background-color: transparent;
   text-decoration: underline;
 }
 a:visited {
-  color: #509aff;
+  color: #3881ff;
   background-color: transparent;
   text-decoration: underline;
 }
 a:hover {
-  color: #2a84ff;
+  color: #4c8efc;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -103,6 +103,7 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
 </style>	 
 </head>
 
