--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -84,7 +84,7 @@ div {
 	margin-bottom: 7px;
 }
 a:link {
-  color: #0645AD;
+  color: #3881ff;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -94,7 +94,7 @@ a:visited {
   text-decoration: underline;
 }
 a:hover {
-  color: #4c8efc;
+  color: #2e6cd9;
   background-color: transparent;
   text-decoration: underline;
 }
