--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -55,7 +55,7 @@ div {
 	font-family: garamond;
 	color:white;
 	text-align: center;
-	font-weight: normal;
+	font-weight: bold;
 	font-style: italic;
 }
 .title {
