--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@ a:active {
 	<br>
 	<br>
 <p class="header">––––    Pictures    ––––</p>
+
+<img src="images/midst of deliverance x.jpg" title="December 31, 2021">
+	<p class="title">"midst of deliverance x.jpg"</p>
+
 <img src="images/wave 12.22.21.jpg" title="December 22, 2021">
 	<p class="title">"wave 12.22.21.jpg"</p>
 	
@@ -134,7 +138,7 @@ a:active {
 	<p class="title">"midst of deliverance vi.jpg"</p>
 
 <img src="images/midst of deliverance v.jpg" title="February 6, 2021">
-	<p class="title">"midst of deliverance vi.jpg"</p>
+	<p class="title">"midst of deliverance v.jpg"</p>
 
 <img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
 	<p class="title">"portrait of the artist 1.28.21.jpg"</p>
