--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -51,11 +51,11 @@ div {
 	color: white;
 }		
 .header {
-	font-size: 16pt;
+	font-size: 18pt;
 	font-family: garamond;
 	color:white;
 	text-align: center;
-	font-weight: bold;
+	font-weight: normal;
 	font-style: italic;
 }
 .title {
