--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -131,6 +131,25 @@ a:active {
 	<br>
 	<p class="header">–––– Anagrams –––––</p>
 
+	<div title="January 5, 2022">
+
+<p class="main">James Webb Space Telescope</p>
+<p class="letters">AA<br>BB<br>CC<br>EEEEEE<br>J<br>L<br>M<br>O<br>PP<br>SSS<br>T<br>W</p>
+<p class="main"><a href="https://youtu.be/v6ihVeEoUdo?t=155" target="_blank">cap ejects pebbles</a> [awesome]</p>
+</div>
+
+<div title="December 26, 2021">
+<p class="main">Maslow's Hierarchy of Needs</p>
+<p class="letters">AA<br>C<br>D<br>EEE<br>F<br>HH<br>I<br>L<br>M<br>N<br>OO<br>RR<br>SSS<br>W<br>Y</p>
+<p class="main">Who am I? Faceless shy nerd, or …?</p>
+</div>
+
+<div title="December 25, 2021">
+<p class="main">Buy now, while supplies last!</p>
+<p class="letters">A<br>B<br>EE<br>H<br>II<br>LLL<br>N<br>O<br>PP<br>SSS<br>T<br>UU<br>WW<br>Y<br></p>
+    <p class="main">Yup, essentials! <i>{bullwhip}</i> …ow!<br></p>
+</div>
+
 <div title="December 25, 2021">
 <p class="main">Buy now, while supplies last!</p>
 <p class="letters">A<br>B<br>EE<br>H<br>II<br>LLL<br>N<br>O<br>PP<br>SSS<br>T<br>UU<br>WW<br>Y<br></p>
