--- a/songs/index.html
+++ b/songs/index.html
@@ -134,8 +134,17 @@ img {
 	<br>
 	<br>
 	
+<p class="header">–––– 2022 ––––</p>
+
+<p class="title" title="January 14, 2022"><a href="cherry blossom.mp3" target="_blank">"🌸.mp3"</a></p>
+<p class="title"><a href="Improv 2022.01.07.mp3" target="_blank">"Improv January 7, 2022.mp3"</a></p>
+<p class="title" title="January 9, 2022"><a href="song for winter ii.mp3" target="_blank">"Song for Winter II.mp3"</a></p>
+<p class="title"><a href="Improv 2022.01.02.mp3" target="_blank">"Improv January 2, 2022.mp3"</a></p>
+
+	
 <p class="header">–––– 2021 ––––</p>
 
+<p class="title" title="December 31, 2021"><a href="song for 2021.mp3" target="_blank">"Song for 2021.mp3"</a></p>
 <p class="title"><a href="Grace 2021.12.29.mp3" target="_blank">"Grace December 29, 2021.mp3"</a></p>
 <p class="title" title="December 14, 2021"><a href="Song for Charles Darwin.mp3" target="_blank">"Song for Charles Darwin.mp3"</a></p>
 <p class="title"><a href="Improv 2021.12.07.mp3" target="_blank">"Improv December 7, 2021.mp3"</a></p>
