--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -131,8 +131,13 @@ a:active {
 	<br>
 	<p class="header">–––– Anagrams –––––</p>
 
-	<div title="January 5, 2022">
+<div title="January 31, 2022">
+<p class="main">revelation: social media is garbage</p>
+<p class="letters">AAAAA<br>B<br>C<br>D<br>EEEE<br>GG<br>IIII<br>LL<br>M<br>N<br>OO<br>RR<br>SS<br>T<br>V</p>
+<p class="main">i beg a soaring "validate me, calories!"</p>
+</div>	
 
+<div title="January 5, 2022">
 <p class="main">James Webb Space Telescope</p>
 <p class="letters">AA<br>BB<br>CC<br>EEEEEE<br>J<br>L<br>M<br>O<br>PP<br>SSS<br>T<br>W</p>
 <p class="main"><a href="https://youtu.be/v6ihVeEoUdo?t=155" target="_blank">cap ejects pebbles</a> [awesome]</p>
