--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -134,7 +134,7 @@ a:active {
 <div title="January 31, 2022">
 <p class="main">revelation: social media is garbage</p>
 <p class="letters">AAAAA<br>B<br>C<br>D<br>EEEE<br>GG<br>IIII<br>LL<br>M<br>N<br>OO<br>RR<br>SS<br>T<br>V</p>
-<p class="main">i beg a soaring "validate me, calories!"</p>
+<p class="main">i beg a soaring <i>"validate me, calories!"</i></p>
 </div>	
 
 <div title="January 5, 2022">
