--- a/songs/index.html
+++ b/songs/index.html
@@ -136,6 +136,11 @@ img {
 	
 <p class="header">–––– 2022 ––––</p>
 
+<p class="title" title="February 13, 2022"><a href="Improv 2022.02.13 sancho.mp3" target="_blank">"Portrait of Sancho Panza.mp3"</a></p>
+<p class="title"><a href="Improv 2022.02.05.mp3" target="_blank">"Improv February 5, 2022 #1.mp3"</a></p>
+<p class="title"><a href="Improv 2022.02.05 2.mp3" target="_blank">"Improv February 5, 2022 #2.mp3"</a></p>
+<p class="title" title="January 17, 2022"><a href="Take a Peek.mp3" target="_blank">"Take a Peek.mp3"</a></p>
+<p class="title" title="January 29, 2022"><a href="Improv 2022.01.29 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #9.mp3"</a></p>
 <p class="title" title="January 14, 2022"><a href="cherry blossom.mp3" target="_blank">"🌸.mp3"</a></p>
 <p class="title"><a href="Improv 2022.01.07.mp3" target="_blank">"Improv January 7, 2022.mp3"</a></p>
 <p class="title" title="January 9, 2022"><a href="song for winter ii.mp3" target="_blank">"Song for Winter II.mp3"</a></p>
