--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@ a:active {
 	<br>
 <p class="header">––––    Pictures    ––––</p>
 
+<img src="images/in the desert iv.jpg" title="February 2, 2022">
+	<p class="title">"in the desert iv.jpg"</p>	
+
 <img src="images/midst of deliverance x.jpg" title="December 31, 2021">
 	<p class="title">"midst of deliverance x.jpg"</p>
 
