--- a/songs/index.html
+++ b/songs/index.html
@@ -135,6 +135,32 @@ img {
 	<br>
 	
 <p class="header">–––– 2022 ––––</p>
+	
+<p class="title" title="June 29, 2022"><a href="improv 20220.06.30 frisell.mp3" target="_blank">"Variation on a Theme by Frisell #9.mp3"</a></p>
+<p class="title" title="June 29, 2022"><a href="improv 2022.06.30 mj.mp3" target="_blank">"Variation on a Theme by MJ.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.26.mp3" target="_blank">"Improv June 26, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.18.mp3" target="_blank">"Improv June 18, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.11 e.mp3" target="_blank">"Blues in E June 11, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.11.mp3" target="_blank">"Improv June 11, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.06.mp3" target="_blank">"Improv June 6, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.04.mp3" target="_blank">"Improv June 4, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.06.04 2.mp3" target="_blank">"Improv June 4, 2022 #2.mp3"</a></p>
+<p class="title" title="May 29, 2022"><a href="song for fourth st park 05.29.mp3" target="_blank">"Song for Fourth St Park.mp3"</a></p>
+<p class="title"><a href="improv 2022.05.29.mp3" target="_blank">"Improv May 29, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.05.29 2.mp3" target="_blank">"Improv May 29, 2022 #2.mp3"</a></p>
+<p class="title" title="May 25, 2022"><a href="yesterd-ish 05.25.mp3" target="_blank">"Yesterd-ish.mp3"</a> (Beatles)</p>
+<p class="title" title="May 23, 2022"><a href="improv 2022.05.23 lovely.mp3" target="_blank">"Variation on a Lovely Theme #3.mp3"</a></p>
+<p class="title"><a href="improv 2022.05.22.mp3" target="_blank">"Improv May 22, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.05.08.mp3" target="_blank">"Improv May 8, 2022.mp3"</a></p>
+<p class="title"><a href="grace 2022.04.21.mp3" target="_blank">"Improv April 21, 2022.mp3"</a></p>
+<p class="title" title="April 21, 2022"><a href="spacewave 04.21.mp3" target="_blank">"Spacewave.mp3"</a></p>
+<p class="title" title="April 17, 2022"><a href="Sancho Sleeps II 04.17.mp3" target="_blank">"Sancho Sleeps II.mp3"</a></p>
+<p class="title" title="April 10, 2022"><a href="song for gustav holst 4.10.mp3" target="_blank">"Song for Gustav Holst.mp3"</a></p>
+<p class="title"><a href="improv 2022.04.09 yeehaw.mp3" target="_blank">"Yeehaw April 9, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.04.09.mp3" target="_blank">"Improv April 9, 2022.mp3"</a></p>
+<p class="title"><a href="improv 2022.04.05.mp3" target="_blank">"Improv April 5, 2022.mp3"</a></p>
+<p class="title" title="March 19, 2022"><a href="improv 2022.03.19 tswift.mp3" target="_blank">"Variation on a Theme by TSwift #3.mp3"</a></p>
+<p class="title"><a href="improv 2022.03.16" target="_blank">"Improv March 16, 2022.mp3"</a></p>	
 <p class="title" title="February 17, 2022"><a href="quixote dreams.mp3" target="_blank">"Quixote Dreams.mp3"</a></p>
 <p class="title" title="February 13, 2022"><a href="sancho sleeps.mp3" target="_blank">"Sancho Sleeps.mp3"</a></p>
 <p class="title"><a href="Improv 2022.02.05.mp3" target="_blank">"Improv February 5, 2022 #1.mp3"</a></p>
@@ -155,6 +181,7 @@ img {
 <p class="title" title="December 14, 2021"><a href="Song for Charles Darwin.mp3" target="_blank">"Song for Charles Darwin.mp3"</a></p>
 <p class="title"><a href="Improv 2021.12.07.mp3" target="_blank">"Improv December 7, 2021.mp3"</a></p>
 <p class="title"><a href="Improv 2021.11.20.mp3" target="_blank">"Improv November 20, 2021.mp3"</a></p>
+<p class="title" title="November 4, 2021"><a href="As the world falls down 2021.11.04.mp3" target="_blank">As the World Falls Down</a> (Bowie)</p>
 <p class="title" title="November 11, 2021"><a href="Song for the Cambrian Explosion.mp3" target="_blank">"Song for the Cambrian Explosion.mp3"</a></p>
 <p class="title" title="November 6, 2021"><a href="Improv 2021.11.06 yeehaw.mp3" target="_blank">"Yeehaw November 6, 2021.mp3"</a></p>
 <p class="title" title="October 29, 2021"><a href="Improv 2021.10.29 water studies.mp3" target="_blank">"Water Studies.mp3"</a></p>
