--- a/anagrams/index.html
+++ b/anagrams/index.html
@@ -130,7 +130,13 @@ a:active {
 	<br>
 	<br>
 	<p class="header">–––– Anagrams –––––</p>
-
+	
+<div title="June 16, 2022">
+<p class="main">Tucker Carlson's Bowtie</p>
+<p class="letters">A<br>B<br>CC<br>EE<br>I<br>K<br>L<br>N<br>OO<br>RR<br>SS<br>TT<br>U<br>W<br></p>
+<p class="main">below tricks (or nutcase)<br><a href="https://www.youtube.com/watch?v=sdQCPlAZjbY" target="_blank">Network siccos</a>, but real<br>truce: <a href="https://youtu.be/AYiVZPHnhSY?t=205" target="_blank">Cornstalk Bowie</a></p>
+</div>
+	
 <div title="January 31, 2022">
 <p class="main">revelation: social media is garbage</p>
 <p class="letters">AAAAA<br>B<br>C<br>D<br>EEEE<br>GG<br>IIII<br>LL<br>M<br>N<br>OO<br>RR<br>SS<br>T<br>V</p>
