--- a/videos/index.html
+++ b/videos/index.html
@@ -114,15 +114,30 @@ a:active {
 
 	<br>
 	<br>
+
+<iframe src="https://www.youtube.com/embed/7GwBY9zx1Ys"></iframe>
+<!-- ^confession -->	
 	
-<iframe src="https://www.youtube.com/embed/bjn2se7-eQU"></iframe>
-<!-- ^peg -->	
+<iframe src="https://www.youtube.com/embed/1rq6ymGPQqY"></iframe>
+<!-- ^branford -->		
+	
+<iframe src="https://www.youtube.com/embed/roT0P-83ueg"></iframe>
+<!-- ^db -->	
+	
+<iframe src="https://www.youtube.com/embed/FM_vyXSJoHo"></iframe>
+<!-- ^party -->	
+	
+<iframe src="https://www.youtube.com/embed/jlx1460I6yQ"></iframe>
+<!-- ^faq -->		
 
 <iframe src="https://www.youtube.com/embed/Zl2-5SUf5Pw"></iframe>
 <!-- ^did you know -->	
 	
 <iframe src="https://www.youtube.com/embed/Cncz1RA_0-Y"></iframe>
 <!-- ^hey -->	
+	
+<iframe src="https://www.youtube.com/embed/bjn2se7-eQU"></iframe>
+<!-- ^peg -->	
 	
 <iframe src="https://www.youtube.com/embed/KNFL65hznMM"></iframe>	
 <!-- ^disconnected -->		
