--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@ a:active {
 	<br>
 <p class="header">––––    Pictures    ––––</p>
 
+<img src="images/cervantes 1.jpg" title="July 10, 2022">
+	<p class="title">"mage (cervantes portraits #1).jpg"</p>
+	
+<img src="images/cervantes 2.jpg" title="July 10, 2022">
+	<p class="title">"seer (cervantes portraits #2).jpg"</p>	
+
+<img src="images/cervantes 3.jpg" title="July 10, 2022">
+	<p class="title">"alchemist (cervantes portraits #3).jpg"</p>
+	
+<img src="images/cervantes 4.jpg" title="July 10, 2022">
+	<p class="title">"leviathan (cervantes portraits #4).jpg"</p>	
+	
+<img src="images/cervantes 5.jpg" title="July 10, 2022">
+	<p class="title">"lord (cervantes portraits #5).jpg"</p>	
+	
 <img src="images/in the desert iv.jpg" title="February 2, 2022">
 	<p class="title">"in the desert iv.jpg"</p>	
 
