--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@ a:active {
 	
 <img src="images/cervantes 5.jpg" title="July 10, 2022">
 	<p class="title">"lord (cervantes portraits #5).jpg"</p>	
+
+<img src="images/camelot iii.jpg" title="March 16, 2022">
+	<p class="title">"camelot iii.jpg"</p>		
 	
 <img src="images/in the desert iv.jpg" title="February 2, 2022">
 	<p class="title">"in the desert iv.jpg"</p>	
