--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
-
-{
-  background-image: url("images/truman crew.png");
+</head>
+  
+<TITLE>
+Under construction!
+  </TITLE>
+  
+<style>
+body {
+  background-image: url("images/truman crew.jpg");
   background-repeat: repeat;
 }
-
-</body>
-</html>
+</style>
+</head>
