--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Under construction!
   
 <style>
 body {
-  background-image: url("images/truman crew.png");
+  background-image: url("images/truman crew 2.png");
   background-repeat: repeat;
 }
 </style>
